--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "easydoc",
-  "version": "0.1.0",
-  "author": "Damien feugas <damien.feugas@gmail.com>",
+  "version": "0.2.1",
+  "author": "feugy <damien.feugas@gmail.com>",
   "description": "A simple technical documentation site with markdown files",
+  "repository": {
+    "url":"https://github.com/feugy/easydoc.git",
+    "type": "git"
+  },
   "keywords": [
 	"markdown",
     "web",
@@ -19,6 +23,13 @@
    "mu2": "0.5.13"
   },
   "devDependencies": {
+    "mocha": "1.1.0",
+    "request": "2.9.202",
+    "should": "0.6.3",
+    "underscore": "1.3.3"
+  },
+  "scripts": {
+    "test": "mocha test"
   },
   "license": "LGPL v3",
   "engine": {
