--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easydoc",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "feugy <damien.feugas@gmail.com>",
   "description": "A simple technical documentation site with markdown files",
   "repository": {
@@ -8,31 +8,35 @@
     "type": "git"
   },
   "keywords": [
-	"markdown",
+    "markdown",
     "web",
     "documentation"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/feugy/easydoc"
+  },
+  "license": "MIT",
   "bin": {
     "easydoc": "./bin/easydoc"
   },
   "main": "./lib/easydoc",
   "dependencies" : {
-   "express": "3.0.0rc2",
-   "node-markdown": "0.1.0",
    "commander": "1.0.0",
-   "mu2": "0.5.13"
+   "express": "3.1.0",
+   "mu2": "0.5.13",
+   "node-markdown": "0.1.1",
+    "underscore": "1.4.4"
   },
   "devDependencies": {
-    "mocha": "1.3.0",
-    "request": "2.9.202",
-    "should": "0.6.3",
-    "underscore": "1.3.3"
+    "mocha": "1.8.2",
+    "request": "2.14.0",
+    "chai": "1.5.0"
   },
   "scripts": {
     "test": "mocha test"
   },
-  "license": "LGPL v3",
   "engine": {
-    "node": ">=0.6"
+    "node": ">=0.8"
   }
 }
