Fix #4: provide a way to customize markdown content with platform dependent data

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easydoc",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "author": "feugy <damien.feugas@gmail.com>",
   "description": "A simple technical documentation site with markdown files",
   "repository": {
@@ -12,6 +12,10 @@
     "web",
     "documentation"
   ],
+  "contributors": [{
+    "name": "Simon Lopez",
+    "email": "simon.lopez@slopez.org"
+  }], 
   "repository": {
     "type": "git",
     "url": "https://github.com/feugy/easydoc"
@@ -22,10 +26,11 @@
   },
   "main": "./lib/easydoc",
   "dependencies" : {
-   "commander": "1.0.0",
-   "express": "3.1.0",
-   "mu2": "0.5.13",
-   "node-markdown": "0.1.1",
+    "commander": "1.1.1",
+    "express": "3.1.0",
+    "js-yaml": "2.0.3",
+    "mu2": "0.5.17",
+    "node-markdown": "0.1.1",
     "underscore": "1.4.4"
   },
   "devDependencies": {
